# toy-flash-attn

./: .clang-format  .gitignore  README.md  pyproject.toml
csrc/flash_attn_v1/: binding.cpp
csrc/flash_attn_v2/: flash_attn.cu
csrc/flash_attn_v2/include/: common.h  concepts.h  cuda_utils.cuh  debug.cuh  flash_attention.cuh  flash_kernels.cuh  forward_kernel.cuh  gemm.cuh  load_store.cuh  ptx_function.cuh  softmax.cuh  static_kernel_config.cuh  swizzling.cuh  tensor.cuh  utils.h
csrc/include/: ptx_funciton.cuh
docs/debug/: nan_in_softmax_root_cause.md
pytests/: test_flash_attention_v1.py
scripts/: generate_kernel_instantiations.py
scripts/benchmark/: ncu_bench.py  run_kernels.py
scripts/debug/: fa_v2_debug.sh
tests/: test_flash_attention_v1.py  test_flash_attention_v2.py  utils.py
toy_attn/: flash_attn_v1.py
toy_attn/flash_attn_v2/: flash_attention.py  kernel.py  kernel_configs.py
